--- a/src/OnlineShop/OnlineShop.Client/Views/OrdersWindow.xaml
+++ b/src/OnlineShop/OnlineShop.Client/Views/OrdersWindow.xaml
@@ -46,7 +46,7 @@
             <TextBlock Margin="0,0,10,0">Search:</TextBlock>
             <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         </Grid>
-        <ListView Grid.Row="2" Margin="10,5" ItemsSource="{Binding Orders}">
+        <ListView Grid.Row="2" Margin="10,5" ItemsSource="{Binding Orders}" SelectedItem="{Binding SelectedOrder}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" Width="150" DisplayMemberBinding="{Binding Name}" />
@@ -57,7 +57,7 @@
         </ListView>
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
             <Button Padding="16, 0" Margin="5">Edit</Button>
-            <Button Padding="16, 0" Margin="5">Delete</Button>
+            <Button Padding="16, 0" Margin="5" Command="{Binding DeleteOrderCommand, Mode=OneWay}">Delete</Button>
             <Button Padding="16, 0" Margin="5">Сheckout</Button>
         </StackPanel>
     </Grid>
