--- a/src/OnlineShop/OnlineShop.Client/App.xaml
+++ b/src/OnlineShop/OnlineShop.Client/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OnlineShop.Client"
-             StartupUri="Views/OrdersWindow.xaml">
+             StartupUri="Views/AuthenticationWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
